@@ -17,6 +17,10 @@
   "--master-url" option if there was no previous invocation.  Also verify
   that a replica talks to the same master UUID as with previous requests.
 
+- actually store UTC in last_modified attribute of release files instead of
+  the local time disguising as UTC.
+
+
 2.0.6
 ----------------
 
